--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
     "@babel/preset-env": "^7.24.7",
     "@eslint/js": "^9.5.0",
     "@jest/globals": "^29.6.1",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.3",
     "babel-jest": "^29.6.1",
     "babel-loader": "^8.3.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.11.0",
+    "cypress": "^13.12.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "fake-indexeddb": "^4.0.2",
     "globals": "^15.6.0",
     "html-webpack-plugin": "^5.6.0",
     "http-server": "^14.1.1",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.6.1",
     "style-loader": "^3.3.4",
     "webpack": "^5.92.1",
